k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flags-api
  labels:
    app.kubernetes.io/name: flags-api
    app.kubernetes.io/part-of: flags-quiz
